# Gatefold-On-Chain-Event-Ticketing-with-Anti-Scalping

./: Cargo.toml  README.md
.github/workflows/: ci.yml  deploy.yml
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs
docs/: DEMO_SCRIPT.md  SCREENSHOT_CHECKLIST.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Banner.jsx  BoxOffice.jsx  CreateEventForm.jsx  EventFeed.jsx  GateCheckIn.jsx  Hero.jsx  NavBar.jsx  QRScanner.jsx  Skeleton.jsx  TicketQRCode.jsx  TicketStub.jsx
frontend/src/contracts/: config.js  factoryClient.js
frontend/src/hooks/: useContractEvents.js  useWallet.js
frontend/src/test/: CreateEventForm.test.jsx  TicketStub.test.jsx
scripts/: deploy.sh  sample_interaction.sh
